@startuml
abstract class "DataSetView (DSV)" as dsv << package data >>

package IAM {
class "Identity" as ident
class "Group" as grp
class "User" as usr
class "Role" as role
class "Permission" as perm

ident <|-- grp
ident <|-- usr

perm "*" -- "1" role
role "*" -- "*" usr
role "*" -- "*" grp
grp "*" -right- "*" usr
}

dsv "1" -- "*" perm
@enduml